--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path: ^1.8.1
   redux_thunk: ^0.4.0
   flutter_platform_widgets: ^2.2.6
+  async_redux: ^18.0.2
 
 dev_dependencies:
   flutter_test:
